# molty.pet

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/waitlist/: route.ts
app/components/: HeroSection.tsx  MoltyVideo.tsx  MoodShowcase.tsx  WaitlistForm.tsx
context/: project.md  reference.md
prisma/: schema.prisma
simulation/: .gitignore  README.md  pyproject.toml  quadruped_demo.py  quadruped_env.py  train_quadruped.py
simulation/models/: molty_quadruped.xml
website/: brand.md  package-lock.json  package.json
website/.openai/: hosting.json
website/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
website/app/api/waitlist/: route.ts
website/app/components/: MoltyFace.tsx  SectionTracker.tsx
website/context/: branding.md
website/lib/: prisma.ts
website/scripts/: build-sites.mjs
